# civ-chatbot

./: .gitignore  LICENSE  README.md  app.py  diagnose_duplicates.py  example.env  ingester.py  judgment.csv  main.py  orchestrator.py  pyproject.toml  scrape_changelogs.py  scrape_citystates.py  scrape_governors.py  scrape_great_people.py  scrape_leaders.py  scrape_main.py  scrape_natural_wonders.py  scrape_orchestrator.py  scrape_policies.py  scrape_religion.py  scrape_tech_civics.py  scrape_world_wonders.py  scraper_main.py  scraper_names.py  scraper_utils.py
evaluation/: eval_runner.py  eval_set.txt  schema.py
src/: config.py  schema.py  secrets.py
src/chains/: rag_pipeline.py  response_generator.py  version_extractor.py
src/ingestion/: ingester.py
src/retrieval/: retriever.py
src/scraping/: scrape_bbg_expanded.py  scrape_buildings.py  scrape_changelogs.py  scrape_city_states.py  scrape_citystates.py  scrape_civic_tree.py  scrape_congress.py  scrape_governor.py  scrape_governors.py  scrape_great_people.py  scrape_improvements.py  scrape_leaders.py  scrape_main.py  scrape_misc.py  scrape_names.py  scrape_natural_wonder.py  scrape_natural_wonders.py  scrape_orchestrator.py  scrape_policies.py  scrape_religion.py  scrape_tech_civics.py  scrape_tech_tree.py  scrape_units.py  scrape_world_wonder.py  scrape_world_wonders.py
tests/ad-hoc/: debug_failures.py  diagnose_duplicates.py
tests/integration/: test_extractor.py  test_orchestrator.py  test_rag_pipeline.py  test_response_generator.py  test_retriever.py  test_scraping.py
