[project]
name = "civilization-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyterlab>=4.5.6",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.14",
    "requests>=2.33.1",
]
